--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "nodemon": "^3.1.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
+  },
+  "dependencies": {
+    "axios": "^1.7.2",
+    "fuse.js": "^7.0.0"
   }
 }
