--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "types": "src/index.d.ts",
   "scripts": {
     "dev": "nodemon",
+    "prettier": "npx prettier --write .",
     "prepublish": "tsc",
     "start:prod": "tsc & node dist/index.js"
   },
@@ -14,6 +15,7 @@
   "type": "module",
   "devDependencies": {
     "nodemon": "^3.1.3",
+    "prettier": "^3.3.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
