--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/xml2js": "^0.4.14",
     "nodemon": "^3.1.3",
     "prettier": "^3.3.2",
     "ts-node": "^10.9.2",
@@ -20,6 +21,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "fast-xml-parser": "^4.4.0",
     "fuse.js": "^7.0.0"
   }
 }
