--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "src/index.ts",
   "types": "src/index.d.ts",
+  "repository": {
+    "url": "https://github.com/EphraimHaber/mangasee-api"
+  },
   "scripts": {
     "dev": "nodemon",
     "prettier": "npx prettier --write .",
