--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "mangasee-api",
   "version": "1.0.0",
-  "main": "src/index.ts",
-  "types": "src/index.d.ts",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
+  "private": false,
   "repository": {
     "url": "https://github.com/EphraimHaber/mangasee-api"
   },
@@ -13,18 +15,25 @@
     "package.json"
   ],
   "scripts": {
-    "dev": "nodemon",
+    "dev": "nodemon ./src/index.ts",
+    "lint": "tsc",
     "prettier": "npx prettier --write .",
-    "prepublish": "tsc",
-    "start:prod": "tsc & node dist/index.js"
+    "build": "tsup src/index.ts --format cjs,esm --dts",
+    "release": "npm run build && changeset publish",
+    "clean": "rimraf dist",
+    "prepublish": "npm run clean && tsc",
+    "start:prod": "npm run clean && tsc && node dist/index.js"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@changesets/cli": "^2.27.5",
     "nodemon": "^3.1.3",
     "prettier": "^3.3.2",
+    "rimraf": "^5.0.7",
     "ts-node": "^10.9.2",
+    "tsup": "^8.1.0",
     "typescript": "^5.4.5"
   },
   "dependencies": {
