--- a/package.json
+++ b/package.json
@@ -37,8 +37,11 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@capacitor/core": "^6.1.0",
+    "@types/jsdom": "^21.1.7",
     "axios": "^1.7.2",
     "fast-xml-parser": "^4.4.0",
-    "fuse.js": "^7.0.0"
+    "fuse.js": "^7.0.0",
+    "jsdom": "^24.1.0"
   }
 }
