--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mangasee-api",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
@@ -42,7 +42,6 @@
     "axios": "^1.7.2",
     "fast-xml-parser": "^4.4.0",
     "fuse.js": "^7.0.0",
-    "jsdom": "^24.1.0",
-    "mangasee-api": "^1.1.2"
+    "jsdom": "^24.1.0"
   }
 }
