--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "mangasee-api",
-  "version": "1.1.9",
+  "version": "1.2.0",
+  "keywords": [
+    "manga",
+    "mangasee"
+  ],
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
